force-app/main/default/objects/PIMProductImage__c/PIMProductImage__c.object-meta.xml
<CustomObject>
    <description>Path to product images</description>
    <label>PIM Product Image</label>
    <nameField>
        <label>PIM Product Image</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PIM Product Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>