force-app/main/default/objects/PIMProductImage__c/fields/DownloadUrl__c.field-meta.xml
<CustomField>
    <fullName>DownloadUrl__c</fullName>
    <label>DownloadUrl</label>
    <type>Url</type>
</CustomField>