force-app/main/default/objects/PIMProductImage__c/fields/ElementUrl__c.field-meta.xml
<CustomField>
    <fullName>ElementUrl__c</fullName>
    <label>ElementUrl</label>
    <type>Url</type>
</CustomField>