force-app/main/default/objects/PIMProductImage__c/fields/File__c.field-meta.xml
<CustomField>
    <fullName>File__c</fullName>
    <label>File</label>
    <type>Url</type>
</CustomField>