force-app/main/default/objects/PIMProductImage__c/fields/Hit__c.field-meta.xml
<CustomField>
    <fullName>Hit__c</fullName>
    <label>Hit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>