force-app/main/default/objects/PIMProductImage__c/fields/ImageId__c.field-meta.xml
<CustomField>
    <fullName>ImageId__c</fullName>
    <label>ImageId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>