force-app/main/default/objects/PIMProductImage__c/fields/ImageType__c.field-meta.xml
<CustomField>
    <fullName>ImageType__c</fullName>
    <label>ImageType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>CATALOG</fullName>
            </value>
            <value>
                <fullName>SETTING</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>