force-app/main/default/objects/PIMProductImage__c/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <label>Medium</label>
    <type>Url</type>
</CustomField>