force-app/main/default/objects/PIMProductImage__c/fields/PageUrl__c.field-meta.xml
<CustomField>
    <fullName>PageUrl__c</fullName>
    <label>PageUrl</label>
    <type>Url</type>
</CustomField>