force-app/main/default/objects/PIMProductImage__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>PIM Product Images</relationshipLabel>
    <relationshipName>PIM_Product_Images</relationshipName>
    <type>Lookup</type>
</CustomField>