force-app/main/default/objects/PIMProductImage__c/fields/Small__c.field-meta.xml
<CustomField>
    <fullName>Small__c</fullName>
    <label>Small</label>
    <type>Url</type>
</CustomField>