force-app/main/default/objects/PIMProductImage__c/fields/Square__c.field-meta.xml
<CustomField>
    <fullName>Square__c</fullName>
    <label>Square</label>
    <type>Url</type>
</CustomField>