force-app/main/default/objects/PIMProductImage__c/fields/Thumb__c.field-meta.xml
<CustomField>
    <fullName>Thumb__c</fullName>
    <label>Thumb</label>
    <type>Url</type>
</CustomField>