force-app/main/default/objects/PIMProductImage__c/fields/XLarge__c.field-meta.xml
<CustomField>
    <fullName>XLarge__c</fullName>
    <label>XLarge</label>
    <type>Url</type>
</CustomField>