force-app/main/default/objects/PIMProductImage__c/fields/XSmall__c.field-meta.xml
<CustomField>
    <fullName>XSmall__c</fullName>
    <label>XSmall</label>
    <type>Url</type>
</CustomField>