force-app/main/default/objects/PIMProductImage__c/fields/XXLarge__c.field-meta.xml
<CustomField>
    <fullName>XXLarge__c</fullName>
    <label>XXLarge</label>
    <type>Url</type>
</CustomField>