force-app/main/default/objects/PIMProductImage__c/fields/XXSmall__c.field-meta.xml
<CustomField>
    <fullName>XXSmall__c</fullName>
    <label>XXSmall</label>
    <type>Url</type>
</CustomField>